--- a/playlist.html
+++ b/playlist.html
@@ -89,7 +89,7 @@
   <!-- LEFT SIDE: PLAYLIST -->
   <div class="playlist">
     <!-- SONG LIST ITEMS -->
-    <div class="song" onclick="playSong('song1')">
+    <div class="song" onclick="playSong('deSLASH')">
       <img src="cover1.jpg" alt="Cover 1">
       <div class="title">Song Title 1</div>
       <div class="lyrics">Lyrics for song 1 go here...</div>
@@ -165,7 +165,7 @@
 
   <script>
     const songs = {
-      song1: { title: "Song Title 1", desc: "Why I picked song 1...", file: "song1.mp3" },
+      song1: { title: "Song Title 1", desc: "Why I picked song 1...", file: "deSLASH.mp3" },
       song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "song2.mp3" },
       song3: { title: "Song Title 3", desc: "Why I picked song 3...", file: "song3.mp3" },
       song4: { title: "Song Title 4", desc: "Why I picked song 4...", file: "song4.mp3" },
