--- a/playlist.html
+++ b/playlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Master’s Playlist</title>
+  <title>Yugamu Playlist</title>
   <style>
     body {
       margin: 0;
