--- a/playlist.html
+++ b/playlist.html
@@ -166,7 +166,7 @@
   <script>
     const songs = {
       song1: { title: "deslash", desc: "Why I picked song 1...", file: "deslash.mp3" },
-      song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "song2.mp3" },
+      song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "dramatique.mp3" },
       song3: { title: "Song Title 3", desc: "Why I picked song 3...", file: "song3.mp3" },
       song4: { title: "Song Title 4", desc: "Why I picked song 4...", file: "song4.mp3" },
       song5: { title: "Song Title 5", desc: "Why I picked song 5...", file: "song5.mp3" },
