--- a/playlist.html
+++ b/playlist.html
@@ -89,7 +89,7 @@
   <!-- LEFT SIDE: PLAYLIST -->
   <div class="playlist">
     <!-- SONG LIST ITEMS -->
-    <div class="song" onclick="playSong('deslash')">
+    <div class="song" onclick="playSong('song1')">
       <img src="cover1.jpg" alt="Cover 1">
       <div class="title">deSLASH</div>
       <div class="lyrics">Lyrics for song 1 go here...</div>
