--- a/playlist.html
+++ b/playlist.html
@@ -90,7 +90,7 @@
   <div class="playlist">
     <!-- SONG LIST ITEMS -->
     <div class="song" onclick="playSong('song1')">
-      <img src="cover1.jpg" alt="Cover 1">
+      <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 1">
       <div class="title">deSLASH</div>
       <div class="lyrics">Lyrics for song 1 go here...</div>
     </div>
