--- a/playlist.html
+++ b/playlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yugamu Playlist</title>
+  <title>Arkion's Yugamu Playlist</title>
   <style>
     body {
       margin: 0;
@@ -14,16 +14,6 @@
       overflow: hidden;
     }
 
-    /* background blood splatter */
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: url("blood1.png") no-repeat center/cover,
-                  url("blood2.png") no-repeat bottom right/40%;
-      opacity: 0.15;
-      z-index: -1;
     }
 
     .playlist {
