--- a/playlist.html
+++ b/playlist.html
@@ -13,7 +13,7 @@
       color: #f5f5f5;
       overflow: hidden;
     }
-
+/* background blood splatter */ body::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url("blood1.png") no-repeat center/cover, url("blood2.png") no-repeat bottom right/40%; opacity: 0.15; z-index: -1;
     }
 
     .playlist {
