--- a/playlist.html
+++ b/playlist.html
@@ -158,9 +158,7 @@
       song1: { title: "deslash", desc: "Why I picked song 1...", file: "deslash.mp3" },
       song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "https://raw.githubusercontent.com/arkionsals/yugamu/refs/heads/main/dramatique.mp3" },
       song3: { title: "Song Title 3", desc: "Why I picked song 3...", file: "song3.mp3" },
-      song4: { title: "Song Title 4", desc: "Why I picked song 4...", file: "yugamu
-/sexysexy.mp3
-" },
+      song4: { title: "Song Title 4", desc: "Why I picked song 4...", file: "y2mate--Join-Me-In-Death.mp3" },
       song5: { title: "Song Title 5", desc: "Why I picked song 5...", file: "song5.mp3" },
       song6: { title: "Song Title 6", desc: "Why I picked song 6...", file: "song6.mp3" },
       song7: { title: "Song Title 7", desc: "Why I picked song 7...", file: "song7.mp3" },
