--- a/playlist.html
+++ b/playlist.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="song" onclick="playSong('song7')">
-      <img src="cover7.jpg" alt="Cover 7">
+      <img src="00 Front.jpg" alt="Cover 7">
       <div class="title">Song Title 7</div>
       <div class="lyrics">Lyrics for song 7 go here...</div>
     </div>
