--- a/playlist.html
+++ b/playlist.html
@@ -86,61 +86,65 @@
     </div>
 
     <div class="song" onclick="playSong('song2')">
-      <img src="cover2.jpg" alt="Cover 2">
+      <img src="Spark!_CD_Cover.jpg
+" alt="Cover 2">
       <div class="title">Song Title 2</div>
       <div class="lyrics">Lyrics for song 2 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song3')">
-      <img src="cover3.jpg" alt="Cover 3">
+      <img src="ad896cf403f0fcab67d3657aec0f03b5.596x596x1.jpg
+" alt="Cover 3">
       <div class="title">Song Title 3</div>
       <div class="lyrics">Lyrics for song 3 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song4')">
-      <img src="cover4.jpg" alt="Cover 4">
+      <img src="Durarawrapping_cover.jpg" alt="Cover 4">
       <div class="title">Song Title 4</div>
       <div class="lyrics">Lyrics for song 4 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song5')">
-      <img src="cover5.jpg" alt="Cover 5">
+      <img src="1200x630bb.jpg
+" alt="Cover 5">
       <div class="title">Song Title 5</div>
       <div class="lyrics">Lyrics for song 5 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song6')">
-      <img src="cover6.jpg" alt="Cover 6">
+      <img src="artworks-000146939301-niji9w-t500x500.jpg
+" alt="Cover 6">
       <div class="title">Song Title 6</div>
       <div class="lyrics">Lyrics for song 6 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song7')">
-      <img src="00 Front.jpg" alt="Cover 7">
+      <img src="New_Vogue_Children.jpg" alt="Cover 7">
       <div class="title">Song Title 7</div>
       <div class="lyrics">Lyrics for song 7 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song8')">
-      <img src="cover8.jpg" alt="Cover 8">
+      <img src="artworks-000161773500-y8k3nc-t500x500.jpg" alt="Cover 8">
       <div class="title">Song Title 8</div>
       <div class="lyrics">Lyrics for song 8 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song9')">
-      <img src="cover9.jpg" alt="Cover 9">
+      <img src="https___images.genius.com_347a8b5bbb2fc28696ba72eea23b4a54.1000x1000x1.png" alt="Cover 9">
       <div class="title">Song Title 9</div>
       <div class="lyrics">Lyrics for song 9 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song10')">
-      <img src="cover10.jpg" alt="Cover 10">
+      <img src="Screenshot_20250824_213547_Google.jpg" alt="Cover 10">
       <div class="title">Song Title 10</div>
       <div class="lyrics">Lyrics for song 10 go here...</div>
     </div>
 
     <div class="song" onclick="playSong('song11')">
-      <img src="cover11.jpg" alt="Cover 11">
+      <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 11">
       <div class="title">Song Title 11</div>
       <div class="lyrics">Lyrics for song 11 go here...</div>
     </div>
