--- a/playlist.html
+++ b/playlist.html
@@ -121,7 +121,7 @@
 
     <div class="song" onclick="playSong('song7')">
       <img src="New_Vogue_Children.jpg" alt="Cover 7">
-      <div class="title">Succubus - Schwarz</div>
+      <div class="title">Succubus - Schwarz Stein</div>
       <div class="lyrics">Lyrics for song 7 go here...</div>
     </div>
 
