--- a/playlist.html
+++ b/playlist.html
@@ -152,8 +152,8 @@
 
   <!-- RIGHT SIDE: EXPLANATION -->
   <div class="details">
-    <h2 id="songTitle">Click a song!</h2>
-    <p id="songDescription">Your explanation will appear here when a song is clicked.</p>
+    <h2 id="songTitle">Arkion's Yugamu Playlist <3</h2>
+    <p id="songDescription">Click a song on the left !!</p>
     <audio id="player" controls></audio>
   </div>
 
