--- a/playlist.html
+++ b/playlist.html
@@ -153,7 +153,7 @@
   <!-- RIGHT SIDE: EXPLANATION -->
   <div class="details">
     <h2 id="songTitle">Arkion's Yugamu Playlist <3</h2>
-    <p id="songDescription">Click a song on the left !!</p>
+    <p id="songDescription">Click a song title on the left !!</p>
     <audio id="player" controls></audio>
   </div>
 
