--- a/playlist.html
+++ b/playlist.html
@@ -82,7 +82,27 @@
     <div class="song" onclick="playSong('song1')">
       <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 1">
       <div class="title">deSLASH - GOATBED</div>
-      <div class="lyrics">Lyrics for song 1 go here...</div>
+      <div class="lyrics">Lyrics
+Grind only the same
+Plaid please keep a net
+Night slide sobs
+
+While beating the wall
+Black out
+Where the nerve is paralyze
+De slash
+
+La shout
+Mite dark
+In the ditch
+Is death
+Clash back
+Nancy infant stage
+Dance dance dance
+
+Trash out
+Trash out
+Decay of a nova</div>
     </div>
 
     <div class="song" onclick="playSong('song2')">
