--- a/playlist.html
+++ b/playlist.html
@@ -82,7 +82,7 @@
     <div class="song" onclick="playSong('song1')">
       <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 1">
       <div class="title">deSLASH - GOATBED</div>
-      <div class="lyrics">Lyrics
+      <div class="lyrics"> <pre>Lyrics
 Grind only the same
 Plaid please keep a net
 Night slide sobs
@@ -102,7 +102,7 @@ Dance dance dance
 
 Trash out
 Trash out
-Decay of a nova</div>
+Decay of a nova</pre></div>
     </div>
 
     <div class="song" onclick="playSong('song2')">
