--- a/playlist.html
+++ b/playlist.html
@@ -110,7 +110,37 @@ Decay of a nova</pre></div>
       <img src="Spark!_CD_Cover.jpg
 " alt="Cover 2">
       <div class="title">Dramatique? - Ito Kananko</div>
-      <div class="lyrics">Lyrics for song 2 go here...</div>
+      <div class="lyrics"><pre>Lyrics (English Translation):
+        
+Jumping out! Tuning in to the sky! Now
+Jamming out! Strong Changing it! The Future
+
+Jumping in! To the Sea Tuning out! Now
+Jamming in! Strong Clap your hands! To the Future
+I can go on a step, for my dreams, for your dreams
+I can go on a jive, for my dreams, for your dreams
+Now, it leaves it to me
+I can go deep glide, for my lust, for your lust
+Now, it leaves it to me
+I can go deep dive, For my lust for you
+I just wanna be dramatic life at all the time and with you
+Now, it leaves it to me
+I can go deep glide, for our destiny
+
+Driving on! Always Bringing off! Don't hesitate
+Driving on! And Carry it off! Believing on! At times Breezing on! Look on
+Drifting off! And Clap your hands! To the light
+I can go on a step, for my dreams, for your dreams
+I can go on a jive, for my dreams, for your dreams
+Now, it leaves it to me
+I can go deep glide, for my lust, for your lust
+Now, it leaves it to me
+I can go deep glide, for my lust, for your lust
+Now, It leaves it to me
+I can go deep dive, for my lust for you
+I just wanna be dramatic life at all the time and with you
+Now, it leaves it to me
+I can go deep glide, for our destiny</pre></div>
     </div>
 
     <div class="song" onclick="playSong('song3')">
