--- a/playlist.html
+++ b/playlist.html
@@ -9,7 +9,7 @@
       font-family: "Arial", sans-serif;
       display: flex;
       height: 100vh;
-      background: #111; /* dark for mood */
+      background: #111; 
       color: #f5f5f5;
       overflow: hidden;
     }
