--- a/playlist.html
+++ b/playlist.html
@@ -147,7 +147,27 @@ I can go deep glide, for our destiny</pre></div>
       <img src="ad896cf403f0fcab67d3657aec0f03b5.596x596x1.jpg
 " alt="Cover 3">
       <div class="title">A Lone Prayer - Yumi Kawamura</div>
-      <div class="lyrics">Lyrics for song 3 go here...</div>
+      <div class="lyrics"><pre>Lyrics (English Translation):
+        
+Lived in buried memory
+With fear-ridden self-consciousness
+I'm just a lone prayer
+
+Keep running on the cold track
+The hate crazed thoughts just don't stop
+As if a dream awake from the dark
+The world deletes all I said to you
+
+Overwrite this pain tearing me apart
+Melting
+Frozen mind
+Ray of light
+Ready for a trip to nowhere
+
+Overwrite this pain tearing me apart
+I'm at ease
+My last pray with no aim
+My last... let me feel alive </pre></div>
     </div>
 
     <div class="song" onclick="playSong('song4')">
