--- a/playlist.html
+++ b/playlist.html
@@ -173,7 +173,40 @@ My last... let me feel alive </pre></div>
     <div class="song" onclick="playSong('song4')">
       <img src="Durarawrapping_cover.jpg" alt="Cover 4">
       <div class="title">Rain Tears - Saki Fujita</div>
-      <div class="lyrics">Lyrics for song 4 go here...</div>
+      <div class="lyrics"><pre>Lyrics (English Translation):
+        
+Hey, do you know?
+What appears in our eyes is dreams and illusions.
+Under the grey sky, I walk, searching for you.
+The words you spun, the past that was closed off –
+What I hear is the sound of a single footstep.
+
+
+(falling rain) The forest of destiny
+(tears for you) Is a deeply sleeping memory.
+The spiderweb threads are softly connected.
+Before they’re reeled in,
+I wonder if I’ll be able to see a gentle light.
+
+Hey, do you know?
+What echoes in my chest is the beat of the dark night.
+I was listening carefully to the sound
+Of the waves that approach and go back.
+
+You who looked down, your whispered voice –
+What will disappear is a fleeting wish.
+
+(falling rain) The rainbow in the open sky
+(tears for you) Is a legend that goes on forever.
+The scent of flowers disappears in the rain.
+I wonder if the day will come
+When I accept a fate soaked in loneliness.
+
+(falling rain) The forest of destiny
+(tears for you) Is a deeply sleeping memory.
+The spiderweb threads are softly connected.
+Before they’re reeled in,
+I wonder if I’ll be able to see a gentle light. </pre></div>
     </div>
 
     <div class="song" onclick="playSong('song5')">
