--- a/playlist.html
+++ b/playlist.html
@@ -333,7 +333,34 @@ Baby join me in death.</pre></div>
     <div class="song" onclick="playSong('song7')">
       <img src="New_Vogue_Children.jpg" alt="Cover 7">
       <div class="title">Succubus - Schwarz Stein</div>
-      <div class="lyrics">Lyrics for song 7 go here...</div>
+      <div class="lyrics"><pre>Lyrics (English Translation):
+        
+The sweet feeling of immorality
+I’ll gourge myself with it till I hurl
+As with this perverted sentiment will
+Gnaw away at your willing new lips
+
+Such long, thick lashes
+My beloved boy too
+Everything, everything!
+His hair, his voice, will be mine soon
+
+I could never think to forgive
+Things like betrayal though
+You lied with that tongue of yours
+So I’m going to cut it off
+
+Hey, you want to hold me, don’t you?
+That’s right, everything's been a bad dream
+But I’ll smash apart your past for you
+So come here dear, come to me my dear
+
+“nightmare”
+”no more”
+
+"nightmare"
+"no more"
+</pre></div>
     </div>
 
     <div class="song" onclick="playSong('song8')">
