--- a/playlist.html
+++ b/playlist.html
@@ -418,7 +418,7 @@ Hold me tight - the sadness - hoo! - never stops
 
   <!-- RIGHT SIDE: EXPLANATION -->
   <div class="details">
-    <h2 id="songTitle">Arkion's Yugamu Playlist <3</h2>
+    <h2 id="songTitle">Arkion's Yugamu Playlist (WIP) <3</h2>
     <p id="songDescription">Click a song title on the left !!</p>
     <audio id="player" controls></audio>
   </div>
