--- a/playlist.html
+++ b/playlist.html
@@ -8,10 +8,10 @@
       margin: 0;
       font-family: "Arial", sans-serif;
       display: flex;
-      height: 100vh;
+      min-height: 100vh;
       background: #111; 
       color: #f5f5f5;
-      overflow: hidden;
+      overflow: auto;
     }
 /* background blood splatter */ body::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url("blood1.png") no-repeat center/cover, url("blood2.png") no-repeat bottom right/40%; opacity: 0.15; z-index: -1;
     }
