--- a/playlist.html
+++ b/playlist.html
@@ -11,13 +11,13 @@
       min-height: 100vh;
       background: #111; 
       color: #f5f5f5;
-      overflow: auto;
     }
 /* background blood splatter */ body::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url("blood1.png") no-repeat center/cover, url("blood2.png") no-repeat bottom right/40%; opacity: 0.15; z-index: -1;
     }
 
     .playlist {
       width: 45%;
+      height: 100vh; /* each side scrolls on its own */
       overflow-y: auto;
       padding: 20px;
       border-right: 2px solid #333;
@@ -55,6 +55,7 @@
     .details {
       width: 55%;
       padding: 20px;
+      height: 100vh; /* each side scrolls on its own */
       overflow-y: auto;
       background: rgba(0, 0, 0, 0.8);
     }
