--- a/playlist.html
+++ b/playlist.html
@@ -12,6 +12,11 @@
       background: #111; 
       color: #f5f5f5;
 
+    }
+/* background blood splatter */ body::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url("blood1.png") no-repeat center/cover, url("blood2.png") no-repeat bottom right/40%; opacity: 0.15; z-index: -1;
+    }
+
+    
        #songImage {
       display: none;
       width: 100%;
@@ -20,9 +25,6 @@
       border-radius: 10px;
       box-shadow: 0 0 10px #000;
     }
-/* background blood splatter */ body::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url("blood1.png") no-repeat center/cover, url("blood2.png") no-repeat bottom right/40%; opacity: 0.15; z-index: -1;
-    }
-
     .playlist {
       width: 45%;
       height: 100vh; /* each side scrolls on its own */
@@ -37,13 +39,20 @@
       cursor: pointer;
     }
 
-    .song img {
-      width: 100%;
-      max-height: 150px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #000;
-    }
+ #songImage {
+  display: none;
+  width: 100%;
+  max-height: 300px;
+  object-fit: contain;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #000;
+}
+
+@media (min-width: 768px) {
+  #songImage {
+    max-height: 500px;
+  }
+}
 
     .title {
       font-size: 18px;
@@ -430,7 +439,9 @@ Hold me tight - the sadness - hoo! - never stops
     <h2 id="songTitle">Arkion's Yugamu Playlist (WIP) <3</h2>
     <p id="songDescription">Click a song title on the left !!</p>
     <audio id="player" controls></audio>
-      <img id="songImage" src="" alt="Song artwork" style="margin-top: 15px; width: 100%; max-height: 300px; object-fit: cover; border-radius: 10px; box-shadow: 0 0 10px #000;" />
+    <div style="display: flex; justify-content: center; margin-top: 15px;">
+      <img id="songImage" src="" alt="Song artwork"/>
+      </div>
   </div>
 
   <script>
