--- a/playlist.html
+++ b/playlist.html
@@ -52,10 +52,12 @@
       cursor: pointer;
     }
 
-    .song img {
-      max-width: 100%;
-      border-radius: 6px;
-      box-shadow: 0 0 6px #000;
+   .song img {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 6px;
+  box-shadow: 0 0 6px #000;
     }
 
     .title {
