--- a/playlist.html
+++ b/playlist.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arkion's Yugamu Playlist</title>
   <style>
     * {
@@ -15,7 +16,6 @@
       min-height: 100vh;
       background: #111;
       color: #f5f5f5;
-      overflow: hidden;
       position: relative;
     }
 
@@ -32,14 +32,11 @@
 
     .playlist {
       width: 45%;
-     min-height: 100vh;
+     min-height: 100%;
       overflow-y: auto;
       padding: 20px;
       border-right: 2px solid #333;
       background: rgba(0, 0, 0, 0.6);
-    }
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   }
 @media (max-width: 768px) {
   body {
