--- a/playlist.html
+++ b/playlist.html
@@ -25,29 +25,40 @@
     }
 
     .song {
+    display: flex;
+      allign-items: flex-start;
+      gap: 12px;
       margin-bottom: 25px;
       cursor: pointer;
+      padding: 10px;
+      border-radius: 8px;
+      transition: background 0.2s;
     }
-
+.songhover {
+  background: rgba(255, 255, 255, 0.05);
+}
     .song img {
-      width: 100%;
-      max-height: 150px;
+      width: 80px;
+      max-height: 80px;
       object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #000;
+      border-radius: 8px;
+      box-shadow: 0 0 6px #000;
+      flex-shrink: 0;
     }
-
+.song-content {
+  flex: 1;
+}
     .title {
       font-size: 18px;
-      margin: 8px 0;
+      margin: 0 0 6px;
       font-weight: bold;
     }
 
     .lyrics {
       font-size: 14px;
-      max-height: 120px;
+      max-height: 100px;
       overflow-y: auto;
-      padding: 8px;
+      padding: 6px;
       background: rgba(255,255,255,0.05);
       border-radius: 6px;
     }
@@ -82,6 +93,7 @@
     <!-- SONG LIST ITEMS -->
     <div class="song" onclick="playSong('song1')">
       <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 1">
+      <div class="song-content">
       <div class="title">deSLASH - GOATBED</div>
       <div class="lyrics"> <pre>Lyrics:
         
