--- a/playlist.html
+++ b/playlist.html
@@ -25,40 +25,29 @@
     }
 
     .song {
-    display: flex;
-      allign-items: flex-start;
-      gap: 12px;
       margin-bottom: 25px;
       cursor: pointer;
-      padding: 10px;
-      border-radius: 8px;
-      transition: background 0.2s;
     }
-.songhover {
-  background: rgba(255, 255, 255, 0.05);
-}
+
     .song img {
-      width: 80px;
-      max-height: 80px;
+      width: 100%;
+      max-height: 150px;
       object-fit: cover;
-      border-radius: 8px;
-      box-shadow: 0 0 6px #000;
-      flex-shrink: 0;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000;
     }
-.song-content {
-  flex: 1;
-}
+
     .title {
       font-size: 18px;
-      margin: 0 0 6px;
+      margin: 8px 0;
       font-weight: bold;
     }
 
     .lyrics {
       font-size: 14px;
-      max-height: 100px;
+      max-height: 120px;
       overflow-y: auto;
-      padding: 6px;
+      padding: 8px;
       background: rgba(255,255,255,0.05);
       border-radius: 6px;
     }
@@ -93,7 +82,6 @@
     <!-- SONG LIST ITEMS -->
     <div class="song" onclick="playSong('song1')">
       <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 1">
-      <div class="song-content">
       <div class="title">deSLASH - GOATBED</div>
       <div class="lyrics"> <pre>Lyrics:
         
@@ -461,3 +449,5 @@ Hold me tight - the sadness - hoo! - never stops
   </script>
 </body>
 </html>
+
+
