--- a/playlist.html
+++ b/playlist.html
@@ -401,7 +401,70 @@ Hold me tight - the sadness - hoo! - never stops
     <div class="song" onclick="playSong('song9')">
       <img src="https___images.genius.com_347a8b5bbb2fc28696ba72eea23b4a54.1000x1000x1.png" alt="Cover 9">
       <div class="title">Take the World - She Wants Revenge</div>
-      <div class="lyrics">Lyrics for song 9 go here...</div>
+      <div class="lyrics"><pre>Lyrics:
+        
+The words that no one speaks
+About the night before
+She stares off at the road
+Her finger taps the door
+I'd hate to judge
+if roles reverse
+You'd think so too
+        
+She'd seen the film before
+But stayed until the end
+She had him to herself
+Perhaps as more than friends
+Maybe I'd do 
+things differently
+If I were you
+
+Your pulse, it races with mine
+And I swear that there's no other girl
+Your body shakes, it's like tonight
+We can take the world
+Your pulse, it races with mine
+And I swear we can take the world
+
+His hand against her cheek
+Her tongue against his neck
+She says, "You're awfully sweet
+I feel like we connect"
+Maybe it's love
+How would she know?
+And did she tell?
+
+The clothes, they go on slow
+She thinks of what to say
+He whispers in her ear
+She smiles and looks away
+Her heart, it screams
+She grabs his hand
+And says, "Me too"
+
+Your pulse, it races with mine
+And I swear that there's no other girl
+Your body shakes, it's like tonight
+We can take the world
+Your pulse, it races with mine
+And I swear we can take the world
+
+Is this the life, the one you imagined?
+Is this the life, the one from your dreams?
+Is this the life, the one you imagined?
+Is this the life, the one from your dreams?
+
+Is this the life, the one you imagined?
+Is this the life, the one from your dreams?
+Is this the life, the one you imagined?
+Is this the life, the one from your dreams?
+
+Your pulse, it races with mine
+And I swear that there's no other girl
+Your body shakes, it's like tonight
+We can take the world
+Your pulse, it races with mine
+And I swear we can take the world</pre></div>
     </div>
 
     <div class="song" onclick="playSong('song10')">
