--- a/playlist.html
+++ b/playlist.html
@@ -469,8 +469,46 @@ And I swear we can take the world</pre></div>
 
     <div class="song" onclick="playSong('song10')">
       <img src="Screenshot_20250824_213547_Google.jpg" alt="Cover 10">
-      <div class="title">Sorciere - Kaya</div>
-      <div class="lyrics">Lyrics for song 10 go here...</div>
+      <div class="title">Arachne - Kaya</div>
+      <div class="lyrics"><pre>Lyrics (English Translation):
+        
+When I pushed my hand into the darkness　”the past” faintly swayed
+Like a spider’s thread[,] memories softly creep up on me
+
+The thread pulls me in　and entwines my memories
+
+A sweet fragrance is scattered about
+Trembling butterflies in a spider’s web　pile up beyond the mirror
+
+Wanting to see you
+In the darkness my hand vainly reaches out into emptiness
+It the night it fades away
+
+Unable to see you
+My fragile wish　gets caught in my web of memories
+I can no longer breathe
+
+A rose colored apparition sings in the depths of my dream
+And laughs a soft beckoning laugh
+
+I wake up with my dream leaving no trace
+A meaningless morning begins
+
+Don’t go
+I can’t forget
+In my memories I can’t
+
+Wanting to see you
+In the darkness my hand vainly reaches out into emptiness
+It the night it fades away
+
+Unable to see you
+My fragile wish　gets caught in my web of memories
+I can no longer breathe
+
+Wanting to see you
+
+Unable to see you</pre></div>
     </div>
 
     <div class="song" onclick="playSong('song11')">
