--- a/playlist.html
+++ b/playlist.html
@@ -536,7 +536,7 @@ Unable to see you</pre></div>
       song7: { title: "Song Title 7", desc: "Why I picked song 7...", file: "Schwarz Stein - Succubus - HimeAsagi.mp3" },
       song8: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3" },
       song9: { title: "Song Title 9", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3" },
-      song10: { title: "Song Title 10", desc: "Why I picked song 10...", file: "y2mate--Sorciere.mp3" },
+      song10: { title: "Song Title 10", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3" },
       song11: { title: "Song Title 11", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3" }
     };
 
