--- a/playlist.html
+++ b/playlist.html
@@ -520,7 +520,7 @@ Unable to see you</pre></div>
 
   <!-- RIGHT SIDE: EXPLANATION -->
   <div class="details">
-    <h2 id="songTitle">Arkion's Yugamu Playlist (WIP) <3</h2>
+    <h2 id="songTitle">Yugamu Playlist (WIP)</h2>
     <p id="songDescription">Click a song title on the left !!</p>
     <audio id="player" controls></audio>
   </div>
