--- a/index.html
+++ b/index.html
@@ -528,7 +528,48 @@ Hold me tight - the sadness - hoo! - never stops</pre></div>
     <div class="song" onclick="playSong('song11')">
       <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 11">
       <div class="title">Only finally there is the free end - GOATBED</div>
-      <div class="lyrics">Lyrics for song 11 go here...</div>
+      <div class="lyrics"><pre>Lyrics (English Translation):
+      
+Ah, that's an incomplete disappearance
+It overflows in my eyes and teeth
+Ah, this is a pessimistic exclusion
+Tomorrow this confusing fog will come to an end
+
+Ah, that's an incomplete disappearance
+It overflows in my eyes and teeth
+Ah, this is a pessimistic exclusion
+Tomorrow this confusing fog will come to an end
+
+1.2.3.4.5.6. Heaven Aid
+
+An ethereal body rises from sensations
+Even if I want to say it, an unexpected halation occurs
+The sky melts in blue, black, and white
+        
+Let's pay careful, let's pay careful
+I wish you good luck
+We never meet without a parting
+
+Let's pay careful, let's pay careful
+I wish you good luck
+We never meet without a parting
+
+1.2.3.4.5.6. Heaven Aid
+
+An ethereal body rises from sensations
+Even if I want to say it, an unexpected halation occurs
+The sky melts in blue, black, and white
+
+Bye-Bye=Game No=Game Dis Fine=Game
+Bye-Bye=Game No=Game Dis Fine=Game
+
+Bye-Bye=Game No...        
+
+1, 2, 3, 4, 5, 6, Heaven Aid
+(1, 2, 3, 4, 5, 6, Heaven Aid)
+1, 2, 3, 4, 5, 6, Heaven Aid
+(1, 2, 3, 4, 5, 6)
+Heaven Aid</pre></div>
     </div>
   </div>
 
