--- a/playlist.html
+++ b/playlist.html
@@ -578,6 +578,7 @@ Heaven Aid</pre></div>
     <h2 id="songTitle">Yugamu Playlist (WIP)</h2>
     <p id="songDescription">Click a song title on the left !!</p>
     <audio id="player" controls></audio>
+    <img id="songImage" src="" alt="Song cover" style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;">
   </div>
 
   <script>
