--- a/playlist.html
+++ b/playlist.html
@@ -583,7 +583,7 @@ Heaven Aid</pre></div>
 
   <script>
     const songs = {
-      song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3" },
+      song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: ui_event_screen_00498_00_04.png"},
       song10: { title: "Song Title 10", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3" },
       song6: { title: "Song Title 6", desc: "Why I picked song 6...", file: "y2mate--Join-Me-In-Death.mp3" },
       song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "y2mate.com - DRAMAtical Murder OST  Dramatique.mp3" },
@@ -602,6 +602,10 @@ Heaven Aid</pre></div>
       document.getElementById("songDescription").innerText = s.desc;
       document.getElementById("player").src = s.file;
       document.getElementById("player").play();
+      const img =
+        document.getElementById("songImage");
+      img.src = s.image; 
+      img.style.display = "block"; 
     }
   </script>
 </body>
