--- a/playlist.html
+++ b/playlist.html
@@ -578,7 +578,12 @@ Heaven Aid</pre></div>
     <h2 id="songTitle">Yugamu Playlist (WIP)</h2>
     <p id="songDescription">Click a song title on the left !!</p>
     <audio id="player" controls></audio>
-    <img id="songImage" src="" alt="Song cover" style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;">
+    part -->
+  <img id="songImage" 
+       src="" 
+       alt="Song cover" 
+       style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;">
+  </div>
   </div>
 
   <script>
@@ -597,16 +602,21 @@ Heaven Aid</pre></div>
     };
 
     function playSong(key) {
-      const s = songs[key];
-      document.getElementById("songTitle").innerText = s.title;
-      document.getElementById("songDescription").innerText = s.desc;
-      document.getElementById("player").src = s.file;
-      document.getElementById("player").play();
-      const img =
-        document.getElementById("songImage");
-      img.src = s.image; 
-      img.style.display = "block"; 
-    }
+  const s = songs[key];
+  document.getElementById("songTitle").innerText = s.title;
+  document.getElementById("songDescription").innerText = s.desc;
+  document.getElementById("player").src = s.file;
+  document.getElementById("player").play();
+
+  // 👇 Update image
+  const img = document.getElementById("songImage");
+  if (s.image) {
+    img.src = s.image;
+    img.style.display = "block";
+  } else {
+    img.style.display = "none"; // hide if no image
+  }
+    
   </script>
 </body>
   </html>
