--- a/playlist.html
+++ b/playlist.html
@@ -587,7 +587,7 @@ Heaven Aid</pre></div>
 
   <script>
     const songs = {
-      song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: ui_event_screen_00498_00_04.png"},
+      song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: "ui_event_screen_00498_00_04.png"},
       song10: { title: "Song Title 10", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3" },
       song6: { title: "Song Title 6", desc: "Why I picked song 6...", file: "y2mate--Join-Me-In-Death.mp3" },
       song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "y2mate.com - DRAMAtical Murder OST  Dramatique.mp3" },
@@ -615,7 +615,7 @@ Heaven Aid</pre></div>
   } else {
     img.style.display = "none"; // hide if no image
   }
-    
+    }
   </script>
 </body>
   </html>
