--- a/arkion.html
+++ b/arkion.html
@@ -526,9 +526,9 @@ Hold me tight - the sadness - hoo! - never stops</pre></div>
 
  <!-- 10. Romantic -->
     <div class="song" onclick="playSong('song12')">
-      <img src="artworks-000161773500-y8k3nc-t500x500.jpg" alt="Cover 12">
-      <div class="title">Romantic ga Tomaranai - Hiro Shimono (Cover)</div>
-      <div class="lyrics"><pre>Lyrics (English Translation):
+      <img src="artworks-E1Y1lTJ58V47-0-t500x500.jpg" alt="Cover 12">
+      <div class="title">Feathery Wings - Aurelio Voltaire</div>
+      <div class="lyrics"><pre>Lyrics:
         
 In the middle of a long kiss (Fu-fu) nonchalantly
 you took off your necklace (Fu-fu) with fingertips
@@ -627,7 +627,7 @@ Heaven Aid</pre></div>
       song7: { title: "Song Title 7", desc: "Why I picked song 7...", file: "Schwarz Stein - Succubus - HimeAsagi.mp3" },
       song9: { title: "Song Title 9", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3" },
       song8: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3" },
-       song12: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3" },
+       song12: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3" },
       song11: { title: "Song Title 11", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3" }
     };
 
