--- a/playlist.html
+++ b/playlist.html
@@ -524,6 +524,94 @@ Back pushed by running tears
 Hold me tight - the sadness - hoo! - never stops</pre></div>
     </div>
 
+   <div class="song" onclick="playSong('song12')">
+      <img src="artworks-E1Y1lTJ58V47-0-t500x500.jpg" alt="Cover 8">
+      <div class="title">Feathery Wings - Aurelio Voltaire</div>
+      <div class="lyrics"><pre>Lyrics:
+        
+You, there on the bridge
+Where've you been, what's your name?
+And you, there on the wall
+Where will you go to, once you fall?
+You, lost at sea
+Do you need me, do you need directions?
+Hey, put down the gun
+What are you thinking?
+You were someone's son
+
+The taste of tears
+The sting of pain
+The smell of fear
+The sounds of crying, oh
+
+A long, long time ago, I fell to this place
+From another dimension
+And thrust amongst the beasts
+And the way they behave, it borders on dementia
+Now through all these years
+I can barely take it
+I don't think I can make it
+Take me away from here
+I want to go home
+I'm so sick and tired of
+
+The taste of tears
+The sting of pain
+The smell of fear
+The sounds of crying, oh
+
+As you're standing at the edge of your life
+What do you remember?
+Was it all you wanted?
+
+I'm trying to earn a set of feathery wings
+I wish I could protect you here
+Oh, please don't cry, now, smile
+As you're standing at the edge of your life
+Your troubles are over
+Mine are just beginning
+
+I'm trying to earn a set of feathery wings
+To take me away from here
+It's me you leave behind
+
+Oh, if only I could have been there
+I'd be a hand for the sinking
+If only I could have been there
+I'd be a prayer for the dying
+See the pain etched in my face,
+Oh, I'm so sick and tired of
+
+The taste of tears
+The sting of pain
+The smell of fear
+The sounds of crying, oh
+
+As you're standing at the edge of your life
+What do you remember?
+Was it all you wanted?
+
+I'm trying to earn a set of feathery wings
+I wish I could protect you here
+Oh, please don't cry, now, smile
+As you're standing at the edge of your life
+Your troubles are over
+Mine are just beginning
+
+I'm trying to earn a set of feathery wings
+To take me away from here
+It's me you leave--
+
+You're gone from here
+Don't leave from here
+Don't leave me here
+I hate it here
+You're gone from here
+Don't leave me here
+I need you here
+I need to see you smile</pre></div>
+    </div>
+    
     <!-- 11. Only finally -->
     <div class="song" onclick="playSong('song11')">
       <img src="Shape_memory_music_CD_Cover.jpg" alt="Cover 11">
@@ -597,6 +685,7 @@ Heaven Aid</pre></div>
       song7: { title: "Song Title 7", desc: "Why I picked song 7...", file: "Schwarz Stein - Succubus - HimeAsagi.mp3", image: "ui_event_screen_00498_00_04.png" },
       song9: { title: "Song Title 9", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3", image: "ui_event_screen_00498_00_04.png" },
       song8: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3", image: "ui_event_screen_00498_00_04.png" },
+      song12: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3", image: "ui_event_screen_00498_00_04.png" },
       song11: { title: "Song Title 11", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3", image: "ui_event_screen_00498_00_04.png" }
     };
 
