--- a/playlist.html
+++ b/playlist.html
@@ -664,7 +664,9 @@ Heaven Aid</pre></div>
   <!-- RIGHT SIDE: EXPLANATION -->
   <div class="details">
     <h2 id="songTitle">Yugamu Playlist (WIP)</h2>
-    <p id="songDescription">Click a song title on the left !!</p>
+    <p id="songDescription"><pre>Click a song title on the left!!
+    
+    Please keep in mind that several routes (Second Scenario, KG, Slasher, S.F., etc) will be mentioned aswell as general spoilers for the game. So you might want to stop here and save this for later. Otherwise, I hope you enjoy my yapping!</pre>pre> </p>
     <audio id="player" controls></audio>
   <img id="songImage" 
        src="" 
@@ -676,8 +678,8 @@ Heaven Aid</pre></div>
   <script>
     const songs = {
       song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: "ui_event_screen_00498_00_04.png"},
-      song10: { title: "Song Title 10", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3", image: "secondscen.png" },
-      song6: { title: "Song Title 6", desc: "Why I picked song 6...", file: "y2mate--Join-Me-In-Death.mp3", image: "joinme.png" },
+      song10: { title: "Arachne", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3", image: "secondscen.png" },
+      song6: { title: "Join Me in Death", desc: "Why I picked song 6...", file: "y2mate--Join-Me-In-Death.mp3", image: "joinme.png" },
       song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "y2mate.com - DRAMAtical Murder OST  Dramatique.mp3", image: "dramatique.png" },
       song3: { title: "Song Title 3", desc: "Why I picked song 3...", file: "A Lone Prayer - Persona 1 (PSP).mp3", image: "chest.png" },
       song4: { title: "Song Title 4", desc: "Why I picked song 4...", file: "04 rain tears.mp3", image: "prince.png" },
