--- a/playlist.html
+++ b/playlist.html
@@ -55,7 +55,7 @@
     .lyrics {
       font-size: 14px;
       max-height: 120px;
-      overflow-y: auto;
+      overflow-y: none;
       padding: 8px;
       background: rgba(255,255,255,0.05);
       border-radius: 6px;
