--- a/playlist.html
+++ b/playlist.html
@@ -680,15 +680,15 @@ Heaven Aid</pre></div>
       song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: "ui_event_screen_00498_00_04.png"},
       song10: { title: "Arachne", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3", image: "secondscen.png" },
       song6: { title: "Join Me in Death", desc: "Why I picked song 6...", file: "y2mate--Join-Me-In-Death.mp3", image: "joinme.png" },
-      song2: { title: "Song Title 2", desc: "Why I picked song 2...", file: "y2mate.com - DRAMAtical Murder OST  Dramatique.mp3", image: "dramatique.png" },
-      song3: { title: "Song Title 3", desc: "Why I picked song 3...", file: "A Lone Prayer - Persona 1 (PSP).mp3", image: "chest.png" },
-      song4: { title: "Song Title 4", desc: "Why I picked song 4...", file: "04 rain tears.mp3", image: "prince.png" },
-      song5: { title: "Song Title 5", desc: "Why I picked song 5...", file: "Gakkou no Kaidan End - Sexy Sexy (Full).mp3", image: "cot.png"},
-      song7: { title: "Song Title 7", desc: "Why I picked song 7...", file: "Schwarz Stein - Succubus - HimeAsagi.mp3", image: "dance.png" },
-      song9: { title: "Song Title 9", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3", image: "kg.png" },
-      song8: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3", image: "gakugamu.png" },
-      song12: { title: "Song Title 8", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3", image: "resolution.png" },
-      song11: { title: "Song Title 11", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3", image: "sf.png" }
+      song2: { title: "Dramatique?", desc: "Why I picked song 2...", file: "y2mate.com - DRAMAtical Murder OST  Dramatique.mp3", image: "dramatique.png" },
+      song3: { title: "A Lone Prayer", desc: "Why I picked song 3...", file: "A Lone Prayer - Persona 1 (PSP).mp3", image: "chest.png" },
+      song4: { title: "Rain Tears", desc: "Why I picked song 4...", file: "04 rain tears.mp3", image: "prince.png" },
+      song5: { title: "Sexy Sexy,", desc: "Why I picked song 5...", file: "Gakkou no Kaidan End - Sexy Sexy (Full).mp3", image: "cot.png"},
+      song7: { title: "Succubus", desc: "Why I picked song 7...", file: "Schwarz Stein - Succubus - HimeAsagi.mp3", image: "dance.png" },
+      song9: { title: "Take the World", desc: "Why I picked song 9...", file: "y2mate--Take-the-World.mp3", image: "kg.png" },
+      song8: { title: "Romantic ga Tomaranai", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3", image: "gakugamu.png" },
+      song12: { title: "Feathery Wings", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3", image: "resolution.png" },
+      song11: { title: "Only finally there is the free end", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3", image: "sf.png" }
     };
 
     function playSong(key) {
