--- a/playlist.html
+++ b/playlist.html
@@ -677,7 +677,7 @@ Heaven Aid</pre></div>
 
   <script>
     const songs = {
-      song1: { title: "deslash", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: "ui_event_screen_00498_00_04.png"},
+      song1: { title: "deSLASH", desc: "Why I picked song 1...", file: "y2mate.com - DRAMAtical Murder OST  deSLASH.mp3", image: "ui_event_screen_00498_00_04.png"},
       song10: { title: "Arachne", desc: "Why I picked song 10...", file: "y2mate--Arachne.mp3", image: "secondscen.png" },
       song6: { title: "Join Me in Death", desc: "Why I picked song 6...", file: "y2mate--Join-Me-In-Death.mp3", image: "joinme.png" },
       song2: { title: "Dramatique?", desc: "Why I picked song 2...", file: "y2mate.com - DRAMAtical Murder OST  Dramatique.mp3", image: "dramatique.png" },
