--- a/index.html
+++ b/index.html
@@ -98,24 +98,20 @@
         
 Grind only the same
 Plaid please keep a net
-Night slide sobs
+Night slide sobs while beating the wall
+Black out where the nerve is paralyze
+De slash la shout
+        
+Mite dark in the ditch is death
+Clash back nancy infant stage dance dance
+Night slide sobs while beating the wall
+Black out where the nerve is paralyze
+De slash la shout
 
-While beating the wall
-Black out
-Where the nerve is paralyze
-De slash
-
-La shout
-Mite dark
-In the ditch
-Is death
-Clash back
-Nancy infant stage
-Dance dance dance
-
-Trash out
-Trash out
-Decay of a nova</pre></div>
+Thrash out
+Thrash out
+Decay of a nova
+De slash la shout</pre></div>
     </div>
 
     <!-- 2. Arachne -->
