--- a/index.html
+++ b/index.html
@@ -613,87 +613,90 @@ I need to see you smile</pre></div>
       <div class="title">Flesh - Simon Curtis</div>
       <div class="lyrics"><pre>Lyrics:
         
-You, there on the bridge
-Where've you been, what's your name?
-And you, there on the wall
-Where will you go to, once you fall?
-You, lost at sea
-Do you need me, do you need directions?
-Hey, put down the gun
-What are you thinking?
-You were someone's son
+This is not the way into my heart, into my head
+Into my brain, into none of the above
+This is just my way of unleashing the feelings deep inside of me
+This spark of black that I seem to love
 
-The taste of tears
-The sting of pain
-The smell of fear
-The sounds of crying, oh
+We can get a little crazy just for fun, just for fun
+Don't even try to hold it back, just let go
+Tie me up and take me over till you're done, 'til I'm done
+You got me feening and I'm ready to blow
 
-A long, long time ago, I fell to this place
-From another dimension
-And thrust amongst the beasts
-And the way they behave, it borders on dementia
-Now through all these years
-I can barely take it
-I don't think I can make it
-Take me away from here
-I want to go home
-I'm so sick and tired of
+Push up to my body, sink your teeth into my flesh
+(Get undressed, t-taste the flesh)
+Bite into me harder, sink your teeth into my flesh
+(Pass the test, t-taste the flesh)
 
-The taste of tears
-The sting of pain
-The smell of fear
-The sounds of crying, oh
+Hold me up against the wall
+Give it 'til I beg, give me some more
+Make me bleed, I like it rough
+Like it rough, rough, rough
 
-As you're standing at the edge of your life
-What do you remember?
-Was it all you wanted?
+Push up to my body, sink your teeth into my flesh
 
-I'm trying to earn a set of feathery wings
-I wish I could protect you here
-Oh, please don't cry, now, smile
-As you're standing at the edge of your life
-Your troubles are over
-Mine are just beginning
+Hold my hands above my head and push my face into the bed
+'Cause I'm a screamer baby, make me a mute
+You put your hand upon my neck and feel the pulse beat-beat-beat-beat
+It's like a trigger getting ready to shoot
 
-I'm trying to earn a set of feathery wings
-To take me away from here
-It's me you leave behind
+Wanna wrestle with me baby, here's a sneak little peak
+You can dominate the game 'cause I'm tough
+I don't play around that often, when I do, I'm a freak
+So you'd better believe I like it rough
 
-Oh, if only I could have been there
-I'd be a hand for the sinking
-If only I could have been there
-I'd be a prayer for the dying
-See the pain etched in my face,
-Oh, I'm so sick and tired of
+Push up to my body, sink your teeth into my flesh
+(Get undressed, t-taste the flesh)
+Bite into me harder, sink your teeth into my flesh
+(Pass the test, t-taste the flesh)
 
-The taste of tears
-The sting of pain
-The smell of fear
-The sounds of crying, oh
+Hold me up against the wall
+Give it 'til I beg, give me some more
+Make me bleed, I like it rough
+Like it rough, rough, rough
 
-As you're standing at the edge of your life
-What do you remember?
-Was it all you wanted?
+Push up to my body, sink your teeth into my flesh
 
-I'm trying to earn a set of feathery wings
-I wish I could protect you here
-Oh, please don't cry, now, smile
-As you're standing at the edge of your life
-Your troubles are over
-Mine are just beginning
+Hold me down and make me scream
+Lay me on the floor
+Turn me on and take me out
+Make me beg for more
 
-I'm trying to earn a set of feathery wings
-To take me away from here
-It's me you leave--
+Push up to my body, sink your teeth into my flesh
+(Get undressed, t-taste the flesh)
+Bite into me harder, sink your teeth into my flesh
+(Pass the test, t-taste the flesh)
 
-You're gone from here
-Don't leave from here
-Don't leave me here
-I hate it here
-You're gone from here
-Don't leave me here
-I need you here
-I need to see you smile</pre></div>
+Hold me up against the wall
+Give it 'til I beg, give me some more
+Make me bleed, I like it rough
+Like it rough, rough, rough
+
+Push up to my body, sink your teeth into my flesh
+
+Push up to my body, sink your teeth into my flesh
+(Get undressed, t-taste the flesh)
+Bite into me harder, sink your teeth into my flesh
+(Pass the test, t-taste the flesh)
+
+Hold me up against the wall
+Give it 'til I beg, give me some more
+Make me bleed, I like it rough
+Like it rough, rough, rough
+
+Push up to my body, sink your teeth into my flesh
+
+Push up to my body, sink your teeth into my flesh
+(Get undressed, t-taste the flesh)
+Bite into me harder, sink your teeth into my flesh
+(Pass the test, t-taste the flesh)
+
+Hold me up against the wall
+Give it 'til I beg, give me some more
+Make me bleed, I like it rough
+Like it rough, rough, rough
+
+Push up to my body, sink your teeth into my flesh</pre></div>
     </div>
 
 
