--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ De slash la shout</pre></div>
       <div class="lyrics"><pre>Lyrics (English Translation):
         
 When I pushed my hand into the darkness ”the past” faintly swayed
-Like a spider’s thread[,] memories softly creep up on me
+Like a spider’s thread, memories softly creep up on me
 
 The thread pulls me in and entwines my memories
 
