--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ Push up to my body, sink your teeth into my flesh</pre></div>
     </div>
 
   <div class="song" onclick="playSong('song8')">
-      <img src="coffin.png" alt="Cover 8">
+      <img src="P3OST_Cover.jpg" alt="Cover 8">
       <div class="title">Kimi no Kioku - Yumi Kawamura</div>
       <div class="lyrics"><pre>Lyrics (English Translation):
         
@@ -734,7 +734,7 @@ Hold me tight - the sadness - hoo! - never stops</pre></div>
     </div>
 
   <div class="song" onclick="playSong('song8')">
-      <img src="deco.png" alt="Cover 8">
+      <img src="20250907_011349.jpg" alt="Cover 8">
       <div class="title">Monitoring (Best Friend Remix) - DECO*27</div>
       <div class="lyrics"><pre>Lyrics (English Translation):
         
@@ -844,8 +844,8 @@ Heaven Aid</pre></div>
       song8: { title: "Romantic ga Tomaranai", desc: "Why I picked song 8...", file: "y2mate.com - Aoba Kuronuma  Character Song Romanticが止まらない.mp3", image: "gakugamu.png" },
       song12: { title: "Feathery Wings", desc: "Why I picked song 8...", file: "y2mate--Feathery-Wings.mp3", image: "resolution.png" },
       song13: { title: "Flesh", desc: "Why I picked song 8...", file: "y2mate--Flesh.mp3", image: "flesh.png" },
-      song14: { title: "Kimi no Kioku", desc: "Why I picked song 8...", file: "y2mate--Persona-3-OST-Memories-of-You-キミの記憶-With-Lyrics.mp3", image: "P3OST_Cover.jpg" },
-      song15: { title: "Monitoring (Best Friend Remix)", desc: "Why I picked song 8...", file: "y2mate--DECO27-モニタリング-Best-Friend-Remix-feat-初音ミク (1).mp3", image: "20250907_011349.jpg" },
+      song14: { title: "Kimi no Kioku", desc: "Why I picked song 8...", file: "y2mate--Persona-3-OST-Memories-of-You-キミの記憶-With-Lyrics.mp3", image: "coffin.png" },
+      song15: { title: "Monitoring (Best Friend Remix)", desc: "Why I picked song 8...", file: "y2mate--DECO27-モニタリング-Best-Friend-Remix-feat-初音ミク (1).mp3", image: "deco.png" },
       song11: { title: "Only finally there is the free end", desc: "Why I picked song 11...", file: "y2mate.com - ONLY FINALLY THERE IS THE FREE END  GOATBED HQ DRAMAtical Murder OST ENDING.mp3", image: "sf.png" }
     };
 
