--- a/index.html
+++ b/index.html
@@ -927,14 +927,14 @@ Heaven Aid</pre></div>
     <h2 id="songTitle">Yugamu Playlist (WIP)</h2>
     <p id="songDescription">Click a song title on the left !!
     
-    Please keep in mind that several routes (Second Scenario, KG, Slasher, S.F., etc) will be mentioned aswell as general spoilers for the game, so you might want to stop here and save this for later. Otherwise, I hope you enjoy my yapping <3 </p>
+    Please keep in mind that several routes (Second Scenario, KG, Slasher, S.F., etc) will be mentioned aswell as general spoilers for the game, so you might want to stop here and save this for later. Otherwise, I hope you enjoy my yapping &lt; </p>
     <audio id="player" controls></audio>
   <img id="songImage" 
        src="" 
        alt="Song cover" 
        style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;">
   </div>
-  </div>
+   </div>
 
   <script>
     const songs = {
