--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ I need to see you smile</pre></div>
     </div>
 
    <div class="song" onclick="playSong('song13')">
-      <img src="simop (1).jpg" alt="Cover 8">
+      <img src="simop.jpg" alt="Cover 8">
       <div class="title">Flesh - Simon Curtis</div>
       <div class="lyrics"><pre>Lyrics:
         
@@ -932,7 +932,7 @@ Heaven Aid</pre></div>
   <img id="songImage" 
        src="" 
        alt="Song cover" 
-       style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;">
+       style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;"></img>
   </div>
    </div>
 
