--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ Heaven Aid</pre></div>
   <img id="songImage" 
        src="" 
        alt="Song cover" 
-       style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;"></img>
+       style="max-width:100%; margin-top:15px; border-radius:10px; box-shadow:0 0 10px #000; display:none;">
   </div>
    </div>
 
