--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       width: 100%;
       margin-top: 15px;
     }
+
+    html, body {
+      overflow-y: scroll;
+    }
   </style>
 </head>
 <body>
